2011-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Replace ${prefix}/texmf => $(datarootdir)/texmf.

2011-09-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Adapt to script_links.am using relpath.

2011-03-31  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Rename ht{,context,latex,mex,tex,texi,xelatex,xetex} => ht*.sh.
	Rename mk4ht => mk4ht.pl and update from TeX4ht repository.
	* Makefile.am: Use the ../am/script_links.am fragment.

2010-12-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (install-links): Check symlink creation.

2010-12-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, configure.ac [WIN32]: Install wrapper binaries
	instead of symlinks to scripts under texmf-dist/scripts/.

2010-12-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ht{,context,latex,mex,tex,texi,xelatex,xetex}.bat:
	Scripts for WIN32 (copied from Master/bin/win32/).
	* Makefile.am, configure.ac [WIN32]: Install ht*.bat scripts.

2010-12-02  Karl Berry  <karl@tug.org>

	* Makefile.am (EXTRA_DIST): rm htcmd.c.

2010-11-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* t4ht.c (main): Initialize addr and media in order to avoid
	compiler warnings.  Use '#if 0' to skip unreachable code.

2010-11-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* t4ht.c (filterGifScript): Avoid 'filtered_script might be used
	uninitialized'.  Use NULL_SCRIPT.

2010-02-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* t4ht.c (get_env_dir) [WIN32]: Declare as static.

2010-02-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tex4ht.c [__MINGW32__]: #define HAVE_BOOLEAN in order to avoid
	conflicting declaration for boolean from kpathsea/types.h.
	Declare various param strings as const.

2009-09-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* t4ht.c, tex4ht.c: Declare numerous param and local strings as
	const.

2009-06-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (AM_CPPFLAGS, AM_CFLAGS): enable compiler warnings.
